# planAGN

./: .editorconfig  .typos.toml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  refs.bib  sample-inputs.yml
.github/workflows/: docs.yml
agn_habitability/: model.py  sample_model.py
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md  installation.md  issues.md  output.md  ref.md  running.md
planAGN/: main.py  model.py  sample_model.py
reports/figures/: .gitignore  .gitkeep
