[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agn_habitability"
version = "0.0.1"
description = "This script computes and plots a set of diagnostics for planetary atmospheres exposed to AGN winds across a span of supermassive black hole (SMBH) masses, radiative efficiencies, and wind speeds."
authors = [
  { name = "Jourdan Waas" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "astropy>=6.1.7",
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "mkdocs-material>=9.7.1",
    "notebook",
    "numpy",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["agn_habitability"]
include = ["pyproject.toml", "agn_habitability/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["agn_habitability"]
force-sort-within-sections = true
